syntax = "proto3";

option csharp_namespace = "WorkHoursSummaryMicroservice";

import "Protos/google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
package workhourssumary;

service WorkHoursSummaryServicer {
		rpc AddWorkHoursSummary (AddWorkHoursSummaryRequest) returns (WorkHoursSummaryReply){
	option (google.api.http) = {
      post: "/v1/work-hours-summary/create"
	  body: "*"
    };
	};
	rpc UpdateWorkHoursSummary (WorkHoursSummaryRequest) returns (WorkHoursSummaryReply){
	option (google.api.http) = {
      put: "/v1/work-hours-summary/update",
	  body: "workHoursSummary"
    };
	};
	rpc DeleteWorkHoursSummary (DeleteWorkHoursSummaryRequest) returns (WorkHoursSummaryReply){
	option (google.api.http) = {
      delete: "/v1/work-hours-summary/delete/{id}",
    };
	};
	// Get all workHoursSummary
	rpc GetAllWorkHoursSummary (stream Empty) returns (stream GetAllWorkHoursSummaryReply){
	};
	rpc GetAllWorkHoursSummaryByEmployee (GetAllWorkHoursSummaryByEmployeeRequest) returns (GetAllWorkHoursSummaryReply){
	option (google.api.http) = {
      get: "/v1/work-hours-summary/get-by-employeeId/{employeeId}",
    };
	};
}
	message WorkHoursSummaryRequest {
	WorkHoursSummary workHoursSummary = 1;
}

message AddWorkHoursSummaryRequest {
  string employeeId = 1;
  string summaryDate = 2;
  int32 totalWorkedHours = 3;
}
message GetAllWorkHoursSummaryByEmployeeRequest {
  string employeeId = 1;
}


message WorkHoursSummary {
  string id = 1;
  string employeeId = 2;
  google.protobuf.Timestamp summaryDate = 3;
  int32 totalWorkedHours = 4;
}

message DeleteWorkHoursSummaryRequest{
	string id = 1;
}

message WorkHoursSummaryReply {
  string message = 1;
}
message GetAllWorkHoursSummaryReply {
	repeated WorkHoursSummary workHoursSummarys = 1;
}

message Empty {

}
