syntax = "proto3";

option csharp_namespace = "WorkHoursSummaryMicroservice";

import "Protos/google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
package workhourssumary;

service WorkHoursSummaryService {
		rpc AddWorkHoursSummary (AddWorkHoursSummaryRequest) returns (WorkHoursSummaryReply){
	option (google.api.http) = {
      post: "/v1/work-hours-summary/add-work-hours-summary",
	  body: "*"
    };
	};
	rpc UpdateWorkHoursSummary (WorkHoursSummaryRequest) returns (WorkHoursSummaryReply){
	option (google.api.http) = {
      put: "/v1/work-hours-summary/add-work-hours-summary",
	  body: "work-hours-summary"
    };
	};
	rpc DeleteWorkHoursSummary (DeleteWorkHoursSummaryRequest) returns (WorkHoursSummaryReply);
	// Get all workHoursSummary
	rpc GetAllWorkHoursSummary (stream Empty) returns (stream GetAllWorkHoursSummaryReply){
	};
}
	message WorkHoursSummaryRequest {
	WorkHoursSummary workHoursSummary = 1;
}

message AddWorkHoursSummaryRequest {
  string employeeId = 1;
  string summaryDate = 2;
  int32 totalWorkedHours = 3;
}

message WorkHoursSummary {
  string id = 1;
  string employeeId = 2;
  string summaryDate = 3;
  int32 totalWorkedHours = 4;
}

message DeleteWorkHoursSummaryRequest{
	string id = 1;
}

message WorkHoursSummaryReply {
  string message = 1;
}
message GetAllWorkHoursSummaryReply {
	repeated WorkHoursSummary workHoursSummarys = 1;
}

message Empty {

}
